--- a/time-zones/time-zones-style.css
+++ b/time-zones/time-zones-style.css
@@ -117,6 +117,16 @@ form label .errmsg {
   right: 30px;
   background: transparent;
 }
+#find-optimal-time {
+  position: absolute;
+  display: block;
+  padding: 7px 12px;
+  border: 1px solid #fff;
+  font-size: 14px;
+  bottom: 20px;
+  right: 30px;
+  background: transparent;
+}
 
 form {
   display: flex;
