implemented all updates on develeopment version

--- a/time-zones-dev/time-zones-style.css
+++ b/time-zones-dev/time-zones-style.css
@@ -176,8 +176,7 @@ form input[type='submit'] {
   align-items: center;
 }
 
-#hours,
-#minutes {
+#hours {
   display: inline-block;
   padding: 20px;
   font-size: 18px;
@@ -188,14 +187,15 @@ form input[type='submit'] {
   position: absolute;
   width: 0;
   height: 0;
-  border: 6px solid transparent;
+  border: 8px solid transparent;
   cursor: pointer;
+  left: 22px;
 }
 .add {
-  top: 3px;
-  border-bottom: 6px solid #fff;
+  top: 0;
+  border-bottom: 8px solid #fff;
 }
 .substract {
-  bottom: 3px;
-  border-top: 6px solid #fff;
+  bottom: 0;
+  border-top: 8px solid #fff;
 }
