attempt to reset bootstrap outline

--- a/main/main-style.css
+++ b/main/main-style.css
@@ -94,6 +94,8 @@ nav.bg-dark {
   background: #fff;
   color: #404f6f;
   border-color: #404f6f;
+  outline: 0 !important;
+  box-shadow: none !important;
 }
 
 @media (max-width: 405px) {
