--- a/poker-probability/poker-probability.css
+++ b/poker-probability/poker-probability.css
@@ -31,7 +31,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  transition: all 0.3s ease-in-out;
+  /* transition: all 0.3s ease-in-out; */
   background: #fff;
   z-index: 10;
 }
@@ -40,7 +40,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  transition: all 0.3s ease-in-out;
+  /* transition: all 0.3s ease-in-out; */
   background: #fff;
   z-index: 10;
 }
@@ -163,7 +163,7 @@
   border-radius: 6px;
   margin-right: 5px;
   position: relative;
-  transition: all 0.3s ease-in-out;
+  /* transition: all 0.3s ease-in-out; */
   cursor: pointer;
 }
 
@@ -189,7 +189,7 @@
   content: '+';
   font-size: 20px;
   z-index: 1;
-  transition: all 0.3s ease-in-out;
+  /* transition: all 0.3s ease-in-out; */
   opacity: 0;
 }
 .card-container.active:after {
